# aoc2022

./: Cargo.toml  justfile  template.rs
src/: grid.rs  lib.rs
