[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.10.0"
itertools = "0.10.5"
log = { version = "0.4.17", features = ["release_max_level_debug"] }
nom = "7.1.1"
once_cell = "1.16.0"
regex = "1.7.0"

[dev-dependencies]
rstest = "0.16.0"
